--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Subtitle Speed Fork",
+  "name": "Subtitle Controller Fork",
   "short_name": "videospeed",
   "version": "0.6.3",
   "manifest_version": 2,
