--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,9 @@
   "description": "Speed up, slow down, advance and rewind HTML5 audio/video with shortcuts",
   "homepage_url": "https://github.com/igrigorik/videospeed",
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/movie-subtitles-16.png",
+    "48": "icons/movie-subtitles-48.png",
+    "128": "icons/movie-subtitles-128.png"
   },
   "permissions": ["storage"],
   "options_ui": {
@@ -17,9 +17,9 @@
   },
   "browser_action": {
     "default_icon": {
-      "19": "icons/icon19.png",
-      "38": "icons/icon38.png",
-      "48": "icons/icon48.png"
+      "19": "icons/movie-subtitles-19.png",
+      "38": "icons/movie-subtitles-38.png",
+      "48": "icons/movie-subtitles-48.png"
     },
     "default_popup": "popup.html"
   },
