--- a/manifest.json
+++ b/manifest.json
@@ -35,5 +35,9 @@
         "css": ["inject.css"],
         "js": ["inject.js"]
     }],
-    "web_accessible_resources": ["inject.css", "shadow.css"]
+    "web_accessible_resources": [
+        "inject.css",
+        "shadow.css",
+        "icons/movie-subtitles-38.png"
+    ]
 }
