Working on the settings menu inside the video and changing the icon size in the video depending on the width when resizing

--- a/manifest.json
+++ b/manifest.json
@@ -38,6 +38,7 @@
     "web_accessible_resources": [
         "inject.css",
         "shadow.css",
+        "icons/movie-subtitles-28.png",
         "icons/movie-subtitles-38.png"
     ]
 }
