--- a/manifest.json
+++ b/manifest.json
@@ -1,44 +1,41 @@
 {
-    "name": "Movie Subtitles",
-    "short_name": "moviesubs",
-    "version": "0.1.4",
-    "manifest_version": 2,
-    "description": "Watch your favorite movies with subtitles, repeat sentences, skip silences, synchronize",
-    "homepage_url": "https://github.com/igrigorik/videospeed",
-    "icons": {
-        "16": "icons/movie-subtitles-16.png",
-        "48": "icons/movie-subtitles-48.png",
-        "128": "icons/movie-subtitles-128.png"
+  "name": "Movie Subtitles",
+  "short_name": "moviesubs",
+  "version": "0.1.4",
+  "manifest_version": 2,
+  "description": "Watch your favorite movies with subtitles, repeat sentences, skip silences, synchronize",
+  "homepage_url": "https://github.com/igrigorik/videospeed",
+  "icons": {
+    "16": "icons/movie-subtitles-16.png",
+    "48": "icons/movie-subtitles-48.png",
+    "128": "icons/movie-subtitles-128.png"
+  },
+  "permissions": ["storage"],
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
+  "browser_action": {
+    "default_icon": {
+      "19": "icons/movie-subtitles-19.png",
+      "38": "icons/movie-subtitles-38.png",
+      "48": "icons/movie-subtitles-48.png"
     },
-    "permissions": ["storage"],
-    "options_ui": {
-        "page": "options.html",
-        "open_in_tab": true
-    },
-    "browser_action": {
-        "default_icon": {
-            "19": "icons/movie-subtitles-19.png",
-            "38": "icons/movie-subtitles-38.png",
-            "48": "icons/movie-subtitles-48.png"
-        },
-        "default_popup": "popup.html"
-    },
-    "content_scripts": [{
-        "all_frames": true,
-        "matches": ["http://*/*", "https://*/*", "file:///*"],
-        "match_about_blank": true,
-        "exclude_matches": [
-            "https://plus.google.com/hangouts/*",
-            "https://hangouts.google.com/*",
-            "https://meet.google.com/*"
-        ],
-        "css": ["inject.css"],
-        "js": ["inject.js"]
-    }],
-    "web_accessible_resources": [
-        "inject.css",
-        "shadow.css",
-        "icons/movie-subtitles-28.png",
-        "icons/movie-subtitles-38.png"
-    ]
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+      "all_frames": true,
+      "matches": ["http://*/*", "https://*/*", "file:///*"],
+      "match_about_blank": true,
+      "exclude_matches": [
+        "https://plus.google.com/hangouts/*",
+        "https://hangouts.google.com/*",
+        "https://meet.google.com/*"
+      ],
+      "css": ["inject.css"],
+      "js": ["inject.js"]
+    }
+  ],
+  "web_accessible_resources": ["inject.css", "shadow.css", "icons/*.png"]
 }
