--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,10 @@
     },
     "default_popup": "popup.html"
   },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "content_scripts": [
     {
       "all_frames": true,
