Making sure the extension gets disabled or enabled  across all tabs when turnig it off or on

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "48": "icons/movie-subtitles-48.png",
     "128": "icons/movie-subtitles-128.png"
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "tabs"],
   "options_ui": {
     "page": "options.html",
     "open_in_tab": true
