--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1.4",
   "manifest_version": 2,
   "description": "Watch your favorite movies with subtitles, repeat sentences, skip silences, synchronize",
-  "homepage_url": "https://github.com/igrigorik/videospeed",
+  "homepage_url": "https://github.com/gignupg/Movie-Subtitles",
   "icons": {
     "16": "icons/movie-subtitles-16.png",
     "48": "icons/movie-subtitles-48.png",
@@ -20,7 +20,7 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "page": "background.html",
+    "scripts": ["config.js", "background.js"],
     "persistent": false
   },
   "content_scripts": [
@@ -28,15 +28,9 @@
       "all_frames": true,
       "matches": ["http://*/*", "https://*/*", "file:///*"],
       "match_about_blank": true,
-      "exclude_matches": [
-        "https://plus.google.com/hangouts/*",
-        "https://hangouts.google.com/*",
-        "https://meet.google.com/*"
-      ],
       "css": ["inject.css"],
       "js": ["config.js", "bundle.js"]
     }
   ],
-  "web_accessible_resources": ["inject.css", "shadow.css", "icons/*.png"],
-  "content_security_policy": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com https://www.googletagmanager.com; object-src 'self'"
+  "web_accessible_resources": ["inject.css", "shadow.css", "icons/*.png"]
 }
